@@ -218,7 +218,7 @@ public class TEXTAREACustomizer extends javax.swing.JPanel {
 
         jSpinner1.setModel(new SpinnerNumberModel(textArea.getRows(), 1, Integer.MAX_VALUE, 1));
         jSpinner1.setEditor(new JSpinner.NumberEditor(jSpinner1, "#"));
-        jSpinner1.setValue(new Integer(textArea.getRows()));
+        jSpinner1.setValue(Integer.valueOf(textArea.getRows()));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 4;
@@ -230,7 +230,7 @@ public class TEXTAREACustomizer extends javax.swing.JPanel {
 
         jSpinner2.setModel(new SpinnerNumberModel(textArea.getCols(), 1, Integer.MAX_VALUE, 1));
         jSpinner2.setEditor(new JSpinner.NumberEditor(jSpinner2, "#"));
-        jSpinner2.setValue(new Integer(textArea.getCols()));
+        jSpinner2.setValue(Integer.valueOf(textArea.getCols()));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 5;
